--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -2,7 +2,7 @@ name: 👨‍💻 Staging Deploy
 
 on:
   push:
-    branches: [ main ]
+    branches: [ development ]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 2
-        ref: main
+        ref: development
 
     - name: 🔨 Build Project
       run: |
