--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
 	},
 	"files": [
 		"/*",
-		"!/upa25",
-		"!/upa25.zip",
 		"!/src",
 		"!.vscode",
 		"!.editorconfig",
@@ -26,17 +24,13 @@
 	"author": "hanneslsm",
 	"license": "GPL-2.0",
 	"description": "",
+	"prettier": "@wordpress/prettier-config",
 	"devDependencies": {
-		"@wordpress/scripts": "^30.11.0",
+		"@wordpress/scripts": "^31.1.0",
+		"browser-sync": "^3.0.4",
+		"browser-sync-webpack-plugin": "^2.4.0",
 		"copy-webpack-plugin": "^12.0.2",
-		"glob": "^11.0.0",
-		"image-minimizer-webpack-plugin": "^4.1.1",
-		"imagemin": "^9.0.0",
-		"imagemin-webpack-plugin": "^2.4.2",
 		"sharp": "^0.33.5",
 		"webpack-remove-empty-scripts": "^1.0.4"
-	},
-	"dependencies": {
-		"gsap": "^3.12.5"
 	}
 }
