--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
+##
+# .gitignore
 # Ignore files and directories
 # This file is used to specify intentionally untracked files that Git should ignore.
-
+#
+# @package ProLooks
+# @version 1.1.0
+#
+# 1.1.0: Add .webpack-cache/ to ignores
+# 1.0.0: Initial version
+##
 
 # Packages
-#
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
 *.7z
 *.dmg
 *.gz
@@ -33,7 +38,8 @@ Thumbs.db
 node_modules/
 *.css.map
 .vscode
-build/
+.webpack-cache/
 
 # Ignore specific files and directories
 */*/gitignore/
+build/
